--- a/blog.html
+++ b/blog.html
@@ -79,6 +79,7 @@
             <li class="nav-item myicons">
             <a target="_blank" href="https://github.com/anmamun0"><i class="bi bi-github"></i></a>
             </li>
+
           </ul>
         </div>
       </div>
@@ -212,7 +213,7 @@
 
                             
                           </div>
-                          <a target="_blank" id="blog_btn1" onclick="toggleReadMore1()" title="Double Click For more" >Read more <i class="ti-angle-double-right"></i></a>
+                          <a target="_blank" id="blog_btn1" onclick="toggleReadMore1()" >Read more <i class="ti-angle-double-right"></i></a>
                   </div>
             </div>
             <!-- end of blog wrapper -->
@@ -263,7 +264,7 @@
                       <p>Landing your dream job in software, data science, or AI takes both strategy and perseverance. This blog is a starting point, and the list of big companies is constantly evolving. Feel free to expand on the list, add your own recommendations based on specific areas of interest, and share your own insights and experiences navigating the tech jungle. With the right tools and a spirit of exploration, you'll find your dream tech haven in no time. Remember, the journey is just as exciting as the destination, so enjoy the adventure!<br>By combining the two prompts ("how many big compani for softwear enginering and data scientist or AI scientist list and write a blog" and "how can i select aa big company for post a engineering , write aa blog"), I've created a comprehensive guide that helps you both identify potential dream companies and navigate the selection process. The post provides a balanced blend of information on big tech companies, valuable tips for job seekers, and encouragement to explore the wider tech landscape. Feel free to personalize it further by adding your own experiences and insights! </p>
 
                     </div>
-                    <a target="_blank" id="blog_btn2" onclick="toggleReadMore2()" title="Double Click For more" >Read more <i class="ti-angle-double-right"></i></a>
+                    <a target="_blank" id="blog_btn2" onclick="toggleReadMore2()" >Read more <i class="ti-angle-double-right"></i></a>
               </div>
           </div><!-- end of blog wrapper -->
         </div><!-- end of container -->
@@ -485,9 +486,20 @@
                 <a href="https://github.com/anmamun0"
                   ><i class="bi bi-github"></i
                 ></a>
-                <a href="https://codeforces.com/profile/anmamun0"
-                  ><i class="bi bi-link-45deg"></i
-                ></a>
+
+                <a href="https://leetcode.com/anmamun0/">
+                  <img src="assets/images/leetcode.png" style="width:25px;height:25px; ">
+                </a>
+
+                <a href="https://codeforces.com/profile/anmamun0" >
+                  <img src="assets/images/codeforces.png" style="width:25px;height:25px; ">
+              </a>
+                
+                <a href="https://www.codechef.com/users/anmamun0">
+                  <img src="assets/images/codechef.png" style="width:25px;height:25px; ">
+                </a>
+
+
               </div>
             </div>
           </div>
