--- a/blog.html
+++ b/blog.html
@@ -435,7 +435,7 @@
                             Their mastery of Python, Django, and other tools ensured a top-notch product. 
                             What sets them apart is not just technical skill but also a commitment to 
                             understanding our needs. Collaborating with "AN" was a game-changer 
-                            for our project."Exceptional service, surpassed expectations, highly recommend for any project needs.""</p>
+                            for our project."Exceptional service, highly recommend for any project needs.</p>
                           <h6 class="testimonial-card-title">Emily Reb</h6>
                       </div>
                   </div>
@@ -488,15 +488,15 @@
                 ></a>
 
                 <a href="https://leetcode.com/anmamun0/">
-                  <img src="assets/images/leetcode.png" style="width:25px;height:25px; ">
+                  <img src="assets/images/leetcode.png" style="width:20px;height:20px; ">
                 </a>
 
                 <a href="https://codeforces.com/profile/anmamun0" >
-                  <img src="assets/images/codeforces.png" style="width:25px;height:25px; ">
+                  <img src="assets/images/codeforces.png" style="width:20px;height:20px; ">
               </a>
                 
                 <a href="https://www.codechef.com/users/anmamun0">
-                  <img src="assets/images/codechef.png" style="width:25px;height:25px; ">
+                  <img src="assets/images/codechef.png" style="width:20px;height:20px; ">
                 </a>
 
 
