--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <a class="btn btn-primary" href="#contact">Contact</a>
 
                
-                <a class="ball" href="assets/images/New_my_CV.pdf" class="nav-link" onclick="startDownload()" download>Get
+                <a class="ball" href="https://drive.google.com/file/d/1zXYv_Uyg5iaNMmCP9NHGl_TAGJk3X7z6/view?usp=drive_link" alt="AN Mamun - Software Engineer.pdf"  class="nav-link" onclick="startDownload()" download>Get
                   Resume
                   <div class="span-wrapper">
                     <span class="s1"></span>
