redirected to my official professional portfolio |  https://anmamun0.vercel.app/

--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
 
   </head>
   <body>
+
+          
+    <!-- Optional message for users -->
+    <div class="redirect-message" style="text-align: center; padding: 20px; background-color: #fc4252;  color: #ffffff; font-size: 18px; ">
+      <p>  ! It seems you're visiting my personal website. For a more professional portfolio, please visit my official website at <a href="https://anmamun0.netlify.app/" target="_blank" style="color: #0f0f0f; background-color: white; padding: 3px; text-decoration: underline;">https://anmamun0.vercel.app/</a>.</p>
+
+    <p>You are being redirected to my official professional portfolio. If not redirected automatically, <br><a href="https://anmamun0.vercel.app/" target="_blank" style="color: #0f0f0f; background-color: white; padding: 3px; text-decoration: underline;" >click here</a>.</p>
+  </div>
+    <!-- Redirect Script -->
+ <script type="text/javascript">
+    setTimeout(function() {
+      window.location.href = "https://anmamun0.vercel.app/";
+    }, 3000); // Redirect after 5 seconds
+  </script>
+
+    
      <!-- Loader Container -->
      <div id="loader-container">
       <div class="bubble-container">
@@ -45,7 +61,7 @@
 
 
     <!-- Navbar -->
-    <nav id="navbar" class="navbar navbar-expand-lg fixed-top py-4">
+      <nav id="navbar" class="navbar navbar-expand-lg fixed-top py-4" style="margin-top: 140px;">
       <div class="container">
         <!-- <a class="navbar-brand fs-2 fw-bold" href="#">AN.MAMUN</a> -->
         <button
